# llm-epistemic-belief-d12a

./: README.md  REPORT.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml
artifacts/: dkyoon_examples.json
data/processed/: fact_opinion_en_test.jsonl  fact_opinion_en_train.jsonl  fact_opinion_en_val.jsonl  fact_or_opinion_test.jsonl  r1_nonambigqa_epistemic_val.jsonl  r1_triviaqa_epistemic_val.jsonl
data/raw/: fact_or_opinion_test.jsonl.zst  fact_or_opinion_train.jsonl.zst
logs/: research_prompt.txt  session_instructions.txt
results/: analysis_summary.json  baseline_test_metrics.json  baseline_val_metrics.json  fact_opinion_summary.json  llm_test_metrics.json  metrics_overview.json
results/predictions/: baseline_test_predictions.csv  baseline_val_predictions.csv  llm_test_predictions.csv
scripts/: analyze_results.py  prep_fact_opinion.py  run_experiments.py
src/research_workspace/: __init__.py  baselines.py  data_utils.py  llm_runner.py  metrics.py
