[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
